[project]
name = "cuda-test-with-python"
version = "0.1.0"
description = "Testing with GPU acceleration"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
# Optional GPU array library (NumPy-like on CUDA). Install with:
#   uv sync --extra gpu
gpu = [
    "cupy-cuda12x",
]
